[package]
name = "rsmixer"
version = "0.4.0"
license = "MIT"
homepage = "https://github.com/jantap/rsmixer"
repository = "https://github.com/jantap/rsmixer"
description = "PulseAudio volume mixer written in rust"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["pulseaudio", "mixer", "volume", "tui", "cli"]
authors = ["Jan Wojcicki <janwojcicki45@gmail.com>"]
edition = "2018"

[features]
default = []
pa_v13 = ["libpulse-binding/pa_v13"]

[dependencies]

# logging
log = "0.4.8"
simple-logging = "2.0.2"
env_logger = "0.7.1"

# general
linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
multimap = "0.8.2"
lazy_static = "1.4.0"
unicode-width = "0.1.8"
state = { version = "0.4.1", features = ["tls"] }
crossterm = { version = "0.19.0", features = ["serde", "event-stream"] }
crossbeam-channel = "0.4.2"
ev-apple = "0.1.1"

# error handling
thiserror = "1.0.20"

# config and cli options
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
confy = "0.4.0"
gumdrop = "0.8.0"

# async
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"

# pulseaudio
libpulse-binding = { version = "2.21.0", default-features = false }
semver = "0.11.0"
itertools = "0.10.0"
